@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4247] Feature: Add an Identity interface
 - [#4243] Feature: Add a Google Map ViewHelper
 - [#4256] Cleanup: Change "EMailAddress" to "EmailAddress" in all function and method names so they are true CamelCase
 - [#4242] Feature: Add an interface for Map points
